<resources>
    <string name="app_name">SmartChat</string>
    <string name="action_poll">Poll</string>
    <string name="action_draw">Draw</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="title_poll">Poll</string>
    <string name="title_draw">Draw</string>
    <string name="title_bookmark">Bookmark</string>
    <string-array name = "contact_names">
        <item>Hong Quan</item>
        <item>Calvin</item>
        <item>Zad</item>
        <item>Xiuquan</item>
        <item>Alfie</item>

    </string-array>

    /*****drawing string resource**/
    <string name="action_settings">Settings</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Delete Drawing!</string>
    <string name="new_drawing_warning">Your current drawing will be completely erased, do you want to proceed?</string>
    <string name="action_redo">Redo</string>
    <string name="action_share">Share</string>
    <string name="label_brush_size">Brush Size:</string>
    /**************drawing*************/

</resources>
