<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DrawingActivity">



    <com.example.kahheng.smartchat.CustomView
        android:id="@+id/custom_view"
        android:layout_above="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />

    <LinearLayout
        android:id="@+id/toolbar_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/action_erase"
            android:background= "@drawable/ic_back_white_32dp"
            android:id="@+id/back_button"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/action_erase"
            android:background= "@drawable/ic_eraser_white_24dp"
            android:id="@+id/action_erase"

             />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:background="@drawable/ic_delete_white_24dp" />



        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_brush"
            android:title="@string/action_brush"
            android:background="@drawable/ic_brush_white_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_color"
            android:title="@string/action_color"
            android:background="@drawable/ic_eyedropper_variant_white_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_save"
            android:title="@string/action_save"
            android:background="@drawable/ic_sd_white_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_undo"
            android:title="@string/action_undo"
            android:background="@drawable/ic_undo_variant_white_24dp" />

    </LinearLayout>


</RelativeLayout>
